# chatter-mate

./: Dockerfile  README.md  main.py  pyproject.toml
clients/cli/: chat.py
clients/voice/: tts.py
src/chattermate/: main.py
src/chattermate/agent/: graph.py  nodes.py  state.py
src/chattermate/api/routes/: chat.py
src/chattermate/api/schemas/: chat.py
tests/: test_chat_endpoint.py  test_nodes.py
